fix z-indexes for eol dropdown

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -98,6 +98,7 @@ body, p {
   width: 13.21428571428571em; // 185px / 14px;
   top: 4.85714285714286em;
   left: 0;
+  z-index: 2;
 }
 
 .eol-link {
@@ -154,6 +155,7 @@ body, p {
   max-width: 100%;
   max-height: 26.625em; // 426px / 16px
   overflow: hidden;
+  z-index: 1;
 }
 
 .slideshow-img {
